--- a/.gitignore
+++ b/.gitignore
@@ -132,8 +132,13 @@ dmypy.json
 # sefl-defined
 /data
 /tmp
-/res
+# /res
+/res/visualization
+/res/batch
+.vscode
 .DS_Store
 *.png
 *.eps
 *.pt
+*.npy
+*.zip
